test_fm/_test70.ref
Error: undefined variable 'x' in '_test67.nj' on line 13
