test_fm/_test70.tmp
Compiling file '/cygdrive/c/Users/halfdan/Documents/NetBeansProjects/njc-oo/test_fm/_test70.nj'...
Error: undefined variable 'x' in '/cygdrive/c/Users/halfdan/Documents/NetBeansProjects/njc-oo/test_fm/_test70.nj' on line 13
